--- a/panels/firmware-security/cc-firmware-security-boot-dialog.ui
+++ b/panels/firmware-security/cc-firmware-security-boot-dialog.ui
@@ -39,7 +39,7 @@
               <object class="GtkImage" id="secure_boot_icon">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
-                <property name="margin-top">40</property>
+                <property name="margin-top">20</property>
                 <property name="margin-bottom">10</property>
                 <property name="pixel-size">70</property>
                 <property name="icon-name">system-reboot-symbolic</property>
@@ -63,7 +63,7 @@
                 <property name="max-width-chars">10</property>
                 <attributes>
                   <attribute name="weight" value="bold"/>
-                  <attribute name="scale" value="2"/>
+                  <attribute name="scale" value="1.5"/>
                 </attributes>
               </object>
               <packing>
@@ -82,8 +82,8 @@
                 <property name="margin-bottom">20</property>
                 <property name="label" translatable="yes">Secure boot prevents malicious software from being loading when device starts.\n\nFor more information, on secure boot, contact the hardware manufactoure or IT support.</property>
                 <property name="wrap">True</property>
-                <property name="width-chars">15</property>
-                <property name="max-width-chars">15</property>
+              <!--  <property name="width-chars">15</property>
+                <property name="max-width-chars">15</property> -->
               </object>
               <packing>
                 <property name="expand">False</property>
