--- a/panels/firmware-security/cc-firmware-security-panel.ui
+++ b/panels/firmware-security/cc-firmware-security-panel.ui
@@ -67,8 +67,14 @@
                       <object class="GtkLabel" id="hsi_label">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
+                        <property name="margin-top">10</property>
+                        <property name="margin-bottom">10</property>
                         <property name="label" translatable="yes">label</property>
                         <property name="justify">center</property>
+                        <attributes>
+                          <attribute name="weight" value="bold"/>
+                          <attribute name="scale" value="1.5"/>
+                        </attributes>
                       </object>
                       <packing>
                         <property name="left-attach">0</property>
@@ -134,7 +140,13 @@
                       <object class="GtkLabel" id="secure_boot_label">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
+                        <property name="margin-top">10</property>
+                        <property name="margin-bottom">10</property>
                         <property name="label" translatable="yes">label</property>
+                        <attributes>
+                          <attribute name="weight" value="bold"/>
+                          <attribute name="scale" value="1.5"/>
+                        </attributes>
                       </object>
                       <packing>
                         <property name="left-attach">0</property>
@@ -179,8 +191,8 @@
             <property name="can-focus">False</property>
             <property name="top-padding">20</property>
             <property name="bottom-padding">10</property>
-            <property name="left-padding">10</property>
-            <property name="right-padding">10</property>
+            <property name="left-padding">40</property>
+            <property name="right-padding">40</property>
             <child>
               <object class="GtkBox" id="firmware_security_log_vbox">
                 <property name="visible">True</property>
@@ -191,12 +203,14 @@
                   <object class="GtkLabel" id="firmware_security_log_label">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <property name="xpad">20</property>
-                    <property name="ypad">10</property>
+                    <property name="halign">start</property>
+                    <property name="valign">start</property>
+                    <property name="margin-start">5</property>
+                    <property name="margin-end">5</property>
+                    <property name="margin-top">5</property>
+                    <property name="margin-bottom">5</property>
                     <property name="label" translatable="yes">Security Events</property>
                     <property name="ellipsize">end</property>
-                    <property name="xalign">0.029999999329447746</property>
-                    <property name="yalign">0</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
                     </attributes>
@@ -212,8 +226,11 @@
                     <property name="visible">True</property>
                     <property name="can-focus">True</property>
                     <property name="shadow-type">in</property>
-                    <property name="width-request">80</property>
-                    <property name="height-request">200</property>
+                    <property name="margin-start">5</property>
+                    <property name="margin-end">5</property>
+                    <property name="margin-top">5</property>
+                    <property name="margin-bottom">5</property>
+                    <property name="vexpand">True</property>
                     <child>
                       <object class="GtkViewport">
                         <property name="visible">True</property>
